bugs fixed alignment fixed

--- a/src/styles/Chat.css
+++ b/src/styles/Chat.css
@@ -1,15 +1,18 @@
 /* Chat.css */
 
-.chat-base {
+.chat-base { 
+    display: flex;
+    flex-direction: column;
     height: 100vh;
-    position: relative;
     background-color: #22223B;
+    justify-content: space-between;
+    
   }
   .text-area-container {
     display: flex;
     margin-left: 3%;
+    margin-bottom: 2%;
     position: relative;
-    top: 81%;
     justify-content: center;
     align-items: center;
     
